# wroclaw-air-insights

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  refresh.yml
docs/research/: data-sources.md
notebooks/: 01_analysis.ipynb
src/wroclaw_air_insights/: __init__.py  clean.py  config.py  db.py  pipeline.py  report.py
src/wroclaw_air_insights/forecast/: __init__.py  baseline.py  features.py  model.py  serving.py
src/wroclaw_air_insights/ingest/: __init__.py  gios.py  weather.py
tests/: test_clean.py  test_db.py  test_forecast.py  test_ingest.py  test_measurements.py  test_serving.py
