[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wroclaw-air-insights"
version = "0.1.0"
description = "Air quality analysis for Wrocław with a 24h PM2.5 forecast"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "requests>=2.32,<3",
    "scikit-learn>=1.5,<2",
    "matplotlib>=3.9,<4",
    "seaborn>=0.13,<0.14",
    "joblib>=1.4,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "jupyterlab>=4.2,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # numpy 2.5 / pandas date_range interaction — third-party, not our code.
    "ignore:The 'generic' unit for NumPy timedelta is deprecated:DeprecationWarning",
]
filterwarnings = [
    # Deprecation emitted by joblib's numpy pickling on NumPy 2.5 — third-party, not ours.
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
]
